Fix asterisk wrapping to the next line in required fields' label

--- a/css/compat/themes/compat-zota-319-beta-8.css
+++ b/css/compat/themes/compat-zota-319-beta-8.css
@@ -7,3 +7,7 @@ body.theme-zota .fc-wrapper #payment ul.wc_payment_methods > li.wc_payment_metho
   padding: var(--fluidcheckout--option-box--spacing--vertical, 10px) var(--fluidcheckout--option-box--spacing--horizontal, 10px) !important;
   padding-left: 24pxvar(--fluidcheckout--option-box--spacing--horizontal, 10px) !important;
 }
+
+body.theme-zota div.woocommerce form .form-row .woocommerce-form__input + span {
+  display: inline;
+}
